# Task-Manager

./: .gitignore  CMakeLists.txt  README.md  Task.cpp  Task.hpp  TaskBankSearchTest  TaskList.cpp  TaskList.hpp  TaskListSortTest  TaskManager  TaskManagerTest  TaskMementoTest  TaskObject.cpp  main.cpp  taskObject.hpp  unitTest
header/: Date.hpp  Task.hpp  TaskBank.hpp  TaskBankCaretaker.hpp  TaskBankCommand.hpp  TaskBankMemento.hpp  TaskCommand.hpp  TaskList.hpp  TaskManager.hpp  TaskMemento.hpp  TaskObject.hpp  helperFunctions.hpp
src/: Task.cpp  TaskBank.cpp  TaskBankCaretaker.cpp  TaskBankCommand.cpp  TaskBankMemento.cpp  TaskCommand.cpp  TaskList.cpp  TaskManager.cpp  TaskMemento.cpp  TaskObject.cpp  helperFunctions.cpp  main.cpp
tests/: TaskBankSortTest.cpp  TaskListDeleteTaskTest.cpp  TaskListSortTest.cpp  taskManagerTest.cpp  unit_test.cpp
